# newuoa-cpp

./: .gitignore  CMakeLists.txt  newuoa.pc.in
cmake/: Config.cmake.in  newuoa.pc.in
include/: newuoa.h
src/: example.c  example_closure.cpp  newuoa.c  newuoa.cpp
